luo s3 ja sqs template

--- a/luo_s3_ampari.yaml
+++ b/luo_s3_ampari.yaml
@@ -5,7 +5,14 @@ Resources:
   Ampari:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: mikon-cloudformation-ampari
-
-
-#validate template
+      BucketName: mikon-cloudformation-malliampari
+      Tags:
+        - Key: Owner
+          Value: Mikko
+  SQSservice:
+    Type: 'AWS::SQS::Queue'
+    Properties:
+      QueueName: mikko-sqs
+      Tags:
+        - Key: Owner
+          Value: Mikko
