nyt s3, ec2 ja sqs template

--- a/luo_s3_ampari.yaml
+++ b/luo_s3_ampari.yaml
@@ -1,7 +1,30 @@
 AWSTemplateFormatVersion: 2010-09-09
 Description: Mikon CloudFormation Demo
 
+Parameters:
+  LatestAmiId:
+    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
+    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
+  InstanceTypeParameter:
+    Type: String
+    Default: t2.micro
+    AllowedValues:
+      - t2.micro
+
 Resources:
+
+  EC2mikko:
+    Type: "AWS::EC2::Instance"
+    Properties:
+      InstanceType: !Ref InstanceTypeParameter
+      ImageId: !Ref LatestAmiId
+      Tags:
+        - Key: Owner
+          Value: Mikko
+        - Key: Name
+          Value: HuugiBuugi
+      KeyName: mikon-demo-ec2
+
   Ampari:
     Type: AWS::S3::Bucket
     Properties:
@@ -9,6 +32,7 @@ Resources:
       Tags:
         - Key: Owner
           Value: Mikko
+
   SQSservice:
     Type: 'AWS::SQS::Queue'
     Properties:
@@ -16,3 +40,4 @@ Resources:
       Tags:
         - Key: Owner
           Value: Mikko
+
